--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -1,15 +1,21 @@
 {
   "name": "backend_node",
   "version": "1.0.0",
-  "type": "module",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon index.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.9"
-  }
+    "nodemon": "^3.0.3"
+  },
+  "devDependencies": {},
+  "description": ""
 }
+
